[gd_scene load_steps=6 format=3 uid="uid://cw263c4irk3ul"]

[ext_resource type="Texture2D" uid="uid://b1rnu2xim6jph" path="res://Assets/Remake/Cutscene_01.png" id="1_56lvr"]
[ext_resource type="Texture2D" uid="uid://c1iw0suwx1o4m" path="res://Assets/Remake/Big_Bubble_01.png" id="1_py4dn"]
[ext_resource type="Script" path="res://menu.gd" id="1_xg643"]
[ext_resource type="Texture2D" uid="uid://bb1o6h0uxy4n1" path="res://Assets/Remake/Cutscene_02.png" id="3_v7tt7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_43hok"]
atlas = ExtResource("1_56lvr")

[node name="Menu" type="Node2D"]
script = ExtResource("1_xg643")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
offset_right = 240.0
offset_bottom = 160.0
texture = SubResource("AtlasTexture_43hok")

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/TextureRect"]
visible = false
layout_mode = 0
offset_left = 146.0
offset_right = 240.0
offset_bottom = 160.0
texture = ExtResource("3_v7tt7")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
texture_filter = 1
texture_repeat = 2
offset_right = 215.0
offset_bottom = 67.0
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 8
size_flags_vertical = 8
alignment = 1

[node name="Start" type="Button" parent="CanvasLayer/HBoxContainer"]
texture_filter = 1
texture_repeat = 2
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 0, 1)
text = "Iniciar"
icon = ExtResource("1_py4dn")
flat = true
icon_alignment = 1

[node name="About" type="Button" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 0, 1)
text = "Sobre"
icon = ExtResource("1_py4dn")
flat = true
icon_alignment = 1

[node name="Quit" type="Button" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 0, 1)
text = "Sair"
icon = ExtResource("1_py4dn")
flat = true
icon_alignment = 1

[node name="Label" type="Label" parent="CanvasLayer"]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.5
offset_top = -11.5
offset_right = 47.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.662745, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "BubbleRune
"

[node name="Score" type="Label" parent="CanvasLayer"]
z_index = 1
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = 58.0
offset_right = 96.0
offset_bottom = 81.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.25, 0.25)
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
text = "Melhor pontuação:"
horizontal_alignment = 1
vertical_alignment = 1
text_direction = 1

[node name="Percentage" type="Label" parent="CanvasLayer"]
z_index = 1
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.0
offset_top = 60.0
offset_right = -55.0
offset_bottom = 83.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Conclusão"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="CanvasLayer/HBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/About" to="." method="_on_about_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/Quit" to="." method="_on_quit_pressed"]
